--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,9 @@ body.dark-mode #manipulate-html {
   background-color: #2d3748;
 }
 
+#add-item {
+  background-color: rgb(228, 205, 205);
+}
 #style {
   font-style: italic;
   text-decoration: underline;
@@ -263,7 +266,14 @@ body.dark-mode .todo-card {
   opacity: 0.7;
   border-top-color: var(--success-color);
 }
+.unique-border-color {
+  border: 10px double green !important;
+}
 
+#event-listeners {
+  background-color: wheat;
+  position: relative;
+}
 /* Mouse Event Section */
 #mouse-event {
   text-align: center;
